--- a/p3processpage/index.html.html
+++ b/p3processpage/index.html.html
@@ -96,8 +96,9 @@
                 <!-- Start of image with caption -->
                 <figure>
                     <img src="audio.png" alt="background music" width="100%">
-                    <figcaption>audio player</figcaption>
+                    <figcaption>audio player(dragable)</figcaption>
                 </figure>
+                <br>
                 <!-- End of image with caption -->
             </div>
             <!-- End of a new section -->
