--- a/p3processpage/index.html.html
+++ b/p3processpage/index.html.html
@@ -39,6 +39,10 @@
                     <img src="puzzle game.png" alt="puzzle game inspiration" width="100%">
                     <figcaption>this picture inspired me</figcaption>
                 </figure>
+                <figure>
+                    <img src="sketch.png" alt="sketch" width="100%">
+                    <figcaption>early sketch of my idea</figcaption>
+                </figure>
                 <img src="puzzle game2.png" alt="puzzle game code" width="100%">
                 <img src="puzzle game3.png" alt="puzzle game" width="100%">
                 <!-- End of image with caption -->
