--- a/index/index.html
+++ b/index/index.html
@@ -7,13 +7,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name='description' content='Nelson Xie, Homepage'>
-    <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/png" href="images/favicon.jpg">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
-    <script src="script.js" async></script>
     <script src="https://kit.fontawesome.com/d34bf4209f.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://use.typekit.net/tvq5elx.css">
 </head>
 
@@ -102,10 +101,7 @@
         window.ontouchmove = function () { return false; }
         window.onorientationchange = function () { document.body.scrollTop = 0; }
     </script>
-
-    <script>
-        console.log("%c%cNelsonXie", "line-height:28px;", "line-height:28px;padding:4px;background:#2ccbe6;color:#FADFA3;font-size:14px;");
-    </script>
+    <script src="script.js"></script>
 
 </body>
 
